# cps-notebook

./: .gitignore  README.md
CPS/: Readme.md
CPS/ContinousTime/: CT.slx  CT.slx.autosave  CT.slxc  PostProcessing.m
FlightDynamics/Air2Air/: README.md
FlightDynamics/AltitudeClimb/: README.md
FlightDynamics/F16-Simulation/: README.md
FlightDynamics/GHAME3/: GHAME3.sln  GHAME3.vcxproj  GHAME3.vcxproj.filters  README.md  class_hierarchy.hpp  documentation.asc  execution.cpp  global_header.hpp  input.asc  input_copy.asc  plot1.csv
FlightDynamics/GHAME3/source/: CMakeLists.txt  GHAME3  doc.asc  input_climb_cruise.asc  readme.asc
FlightDynamics/Miss_distance_analysis/: alppx_mean_distribution.wmf  mach_3_exercise_1.wmf  miss_distance.md
FlightDynamics/NASA X30/source/: cruise_functions.cpp  global_functions.cpp  input_climb.asc  input_copy.asc  plot1.asc
FlightDynamics/StabilityControl/: README.md  way-point-trajectory.wmf
FlightDynamics/TrajectoryAnalysis/: README.md
MotionPlanning/: README.md
MotionPlanning/DubinsCurve/: Asn1_DubinsPath.py  Asn1_DubinsPathTesting.py  Asn2_RRTDubins.py  Asn2_RRTDubinsTest.py  Asn3_RRTStarDubins.py  Asn3_RRTStarDubinsTest.py  Asn4_RRTDrivingTest.py  Asn4_RRTDubinsDriving.py  cspaceRoadmap.npy
Radar/: radar_target_generation_and_detection.m
SFND_Lidar_Obstacle_Detection/src/: kdtree.h
SFND_Lidar_Obstacle_Detection/src/sensors/: lidar.h
cpp/: piont_cloud.cpp  test.cpp
lidar/SFND_Lidar_Obstacle_Detection/: CMakeLists.txt  README.md  environment
lidar/SFND_Lidar_Obstacle_Detection/src/: environment.cpp  processPointClouds.cpp  processPointClouds.h  temp.cpp
modelling/: Readme.md
modelling/ContinousTime-RoomTemperature/: Init.m  RoomTemperature.slx  RoomTemperature.slx.autosave  RoomTemperature.slxc
modelling/ContinousTime-VehicleSimuation/: Initialization.m
modelling/Coursework/Module 3/: Problem 1.html  Problem 1.ipynb  problem 2.ipynb  problem 3.html
modelling/Coursework/Module 4/: Porblem 4.html
modelling/Coursework/Module2/: problem1.html  problem1.ipynb
modelling/Coursework/Problem1/: Problem1.ipynb
modelling/Coursework/Problem2/: Problem2.ipynb  Readme.html
modelling/DiscreteTime/: discrete_time_ground_vehicle_simulation.slx
modelling/FSM-Example/: 0101.mat  FSME.slx  FSME.slxc  Init.m  Post.m  pulse_train.mat
modelling/FSM-Limit-RoomTemperature/: Init.m  RoomTemperature.slx  RoomTemperature.slx.autosave  RoomTemperature.slxc  Temp-Limit-Source-FSM.fig  post_processing.m
modelling/FSM-RoomTemperature/: FSMRT.slx  FSMRT.slxc  Init.m  Post.m  Pulse.mat
modelling/FiniteStates/: FSM.slx  FSM.slxc  FSM1.slx  FSM1.slxc  Init.m  Post.m  Pulse.slx  TrainPulse.mat
modelling/ParticleMotion/: Init.m  Problem2.ipynb  Readme.html
modelling/Problem1/: Problem2.ipynb  Readme.html
modelling/Problem1/Vehicle-StraightLine/: Init.m
modelling/Vehicle-StraightLine/: PostProcessing.m
robotics/: Euler_angles.m  HarmonicOscillator.m  R_matrix_points_A_B.m  RotM_to_U_Phi.m  RotationMatrix_U_Phi.m  mvar_pdf.m  non_linear_control.m
robotics/Assignments/Computational Motion Planning/: Astargrid.m  ConfigurationSpace1.m  GaadientBasedPlanner.m
robotics/Assignments/KalmanFilter/: SubmissionFilter.mat  kalmanFilter.m
robotics/Assignments/OccupacyGridMapping/: SubmissionMap1.mat  SubmissionMap2.mat  occGridMapping.m  yourTestResult.mat
robotics/Assignments/Perception-DollyZoomEffect/: RoboticsPerceptionWeek1Submission.mat  compute_f_pos.m  compute_focal_length.m
robotics/Assignments/Perception-ImageProjection/: RoboticsPerceptionWeek2Submission.mat  est_homography.asv  est_homography.m  warp_pts.asv  warp_pts.m
ros/: README.md
ros/actions/: README.md
ros/basic_nav/src/topic_subscriber_pkg/: CMakeLists.txt  package.xml
ros/basic_nav/src/topic_subscriber_pkg/src/: simple_topic_subscriber.cpp
ros/basics/actions/actions_quiz/: CMakeLists.txt
ros/executors_exercises_pkg/: package.xml
ros/services_quiz_srv/: CMakeLists.txt  package.xml
ros/urdf/: fixed-joint.urdf
ros/urdf-basics/: double-joint.urdf
ros/urdf-real-robot/: CMakeLists.txt  README.md  start_sim_demo
ros/wall-detect-follow-1lap/action_server/: CMakeLists.txt  package.xml
ros/wall-following/: README.md
ros/wall-following-with-wall-detection/: README.md  ROS2.drawio
sensor-fusion/Radar/: CFAR_ReadMe.md
sensor-fusion/SFND_3D_Object_Tracking/: Submission.md
(+552 files in other folders)
